Adição da página pacer
Adição da página pacer.

--- a/templates/base.html
+++ b/templates/base.html
@@ -24,7 +24,7 @@
                 <a class="nav-link active" aria-current="page" href="/estrutura" style="padding-right:10px;">Estrutura do time</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="#" style="padding-right:10px;">Formulário Pacer</a>
+                <a class="nav-link active" href="/pacer" style="padding-right:10px;">Formulário Pacer</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link active" href="/login"style="padding-right:10px;">Login</a>
