moda pegando maior valor

--- a/templates/usuario.html
+++ b/templates/usuario.html
@@ -6,7 +6,7 @@
 {% block content %}
 
 <div class="container text-center">
-    <a href="/time" type="button" class="btn btn-dark">Time</a>
+    <!-- <a href="/time" type="button" class="btn btn-dark">Time</a> -->
     <a href="/notas" type="button" class="btn btn-dark">Avaliar</a>
 
    <div class="row align-items-start">
